syntax = "proto3";

package com.jingyicare.jingyi_icis_engine.proto.config;

message DeptChecklistGroupPB {
    int32 id = 1; // 护理质控分组ID
    string dept_id = 2; // 部门ID
    string group_name = 3; // 护理质控分组名称
    string comments = 4; // 护理质控分组备注
    int32 display_order = 5; // 护理质控分组显示顺序

    repeated DeptChecklistItemPB item = 6; // 护理质控分组下的质控项
}

message DeptChecklistItemPB {
    int32 id = 1; // 护理质控项ID
    string item_name = 2; // 护理质控项名称
    bool is_critical = 3; // 是否为重要质控项
    string comments = 4;  // 护理质控项备注
    bool has_note = 5; // 是否启用输入框
    string default_note = 6; // 默认护理质控项输入框内容
    int32 display_order = 7; // 护理质控项显示顺序
}

message PatientChecklistRecordPB {
    int32 id = 1; // 病人质控记录ID
    int64 pid = 2; // 病人ID

    string created_by = 3; // 质控人
    string created_by_account_name = 4; // 质控人账号名称
    string effective_time_iso8601 = 5; // 质控时间
    string created_at_iso8601 = 6; // 创建时间
    string modified_by = 7; // 最后修改人
    string modified_at_iso8601 = 8; // 最后修改时间
    string reviewed_by = 9; // 审核人
    string reviewed_at_iso8601 = 10; // 审核时间

    repeated PatientChecklistGroupPB group = 11; // 病人质控记录下的质控分组
}

message PatientChecklistGroupPB {
    int64 id = 1; // 病人质控分组ID, patient_checklist_groups.id
    string group_name = 2; // 病人质控分组名称
    string comments = 3; // 病人质控分组备注
    int32 display_order = 4;

    int32 checked_count = 5; // 已质控项数量
    int32 total_count = 6; // 总质控项数量

    repeated PatientChecklistItemPB item = 7; // 病人质控分组下的质控项
}

message PatientChecklistItemPB {
    int64 id = 1; // 病人质控项ID
    string item_name = 2; // 病人质控项名称
    bool is_critical = 3; // 是否为重要质控项
    string comments = 4; // 病人质控项备注
    int32 display_order = 5;

    bool is_checked = 6; // 是否已质控
    bool has_note = 7; // 是否启用输入框
    string note = 8; // 病人质控项输入框内容
}

message ChecklistConfigPB {
    repeated DeptChecklistGroupPB group = 1; // 护理质控分组列表，用于初始化系统（20250704初始版本置空，实施用sql导入的方式配置）
}